setup game layout + styling

--- a/index.html
+++ b/index.html
@@ -10,6 +10,38 @@
 </head>
 <body>
 
+  <div class="wrapper">
+    <div class="container">
+      <div class="selection-heading">make your pick below:</div>
+      <div class="selections">
+        <div id="rock" class="choice">Rock</div>
+        <div id="paper" class="choice">Paper</div>
+        <div id="scissors" class="choice">Scissors</div>
+      </div>
+      <div class="choices">
+        <div class="player">
+          <div class="player-heading">Player Chooses:</div>
+          <div class="player-choice">Paper</div>
+          <div class="player-result">Loser!</div>
+        </div>
+        <div class="computer">
+          <div class="computer-heading">Computer Chooses:</div>
+          <div class="computer-choice">Rock</div>
+          <div class="computer-result">Winner!</div>
+        </div>
+      </div>
+      <div class="scores">
+        <div class="player-score">
+          <div class="p-score">0</div>
+          <div class="p-title">Player Scrore</div>
+        </div>
+        <div class="computer-score">
+          <div class="c-score">1</div>
+          <div class="c-title">Computer Scrore</div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
