Various updates to frontend layout + functional additions

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <div class="wrapper">
     <div class="container">
+      <div class="replay">PLAY</div>
       <div class="selection-heading">make your pick below:</div>
       <div class="selections">
         <button id="rock" class="choice">Rock</button>
@@ -22,21 +23,21 @@
         <div class="player">
           <div class="player-heading">Player Chooses:</div>
           <div class="player-choice"></div>
-          <div class="player-result">Loser!</div>
+          <div class="player-result"></div>
         </div>
         <div class="computer">
           <div class="computer-heading">Computer Chooses:</div>
           <div class="computer-choice"></div>
-          <div class="computer-result">Winner!</div>
+          <div class="computer-result"></div>
         </div>
       </div>
       <div class="scores">
         <div class="player-score">
-          <div class="p-score">0</div>
+          <div class="p-score"></div>
           <div class="p-title">Player Scrore</div>
         </div>
         <div class="computer-score">
-          <div class="c-score">1</div>
+          <div class="c-score"></div>
           <div class="c-title">Computer Scrore</div>
         </div>
       </div>
