Refactored functions + added play again screen

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
 
   <div class="wrapper">
+    <div class="overlay">
+        <div class="replay">PLAY AGAIN...</div>
+    </div>
     <div class="container">
-      <div class="replay">PLAY</div>
+
       <div class="selection-heading">make your pick below:</div>
       <div class="selections">
         <button id="rock" class="choice">Rock</button>
