added rounds conditional rendering + adjusted play button wording based on rounds

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
   <div class="wrapper">
     <div class="overlay">
-        <div class="replay">PLAY AGAIN...</div>
+        <div class="replay">PLAY Game!</div>
+        <div class="rounds"></div>
     </div>
     <div class="container">
 
