added site logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="rounds"></div>
     </div>
     <div class="container">
-
+      <img class="logo" src="rock-paper-scissor_logo.png" alt="">
       <div class="selection-heading">make your pick below:</div>
       <div class="selections">
         <button id="rock" class="choice">Rock</button>
